<resources>
    <string name="app_name">Xeno Store</string>
    <string name="Name">Name</string>
    <string name="Subscription_Type">Subscription Type</string>
    <string name="Gold">Gold</string>
    <string name="Silver">Silver</string>
    <string name="Normal">Normal</string>
    <string name="Item_Code">Item Code</string>
    <string name="Amount_Goods">Amount Goods</string>
    <string name="Process">process</string>
    <string name="Delete">Delete</string>
    <string name="welcome_message">WELCOM</string>
    <string name="member_type">Member Type:</string>
    <string name="item_code">Item Code:</string>
    <string name="item_name">Item Name:</string>
    <string name="item_price">Item Price:</string>
    <string name="total_price">Total Price:</string>
    <string name="discount_price">Discount Price:</string>
    <string name="member_discount">Member Discount:</string>
    <string name="total_payment">Total Payment:</string>
    <string name="transaction_detail">Transaction Detail:</string>
    <string name="name">Name:</string>
    <string name="share_via">Share Via</string>
    <string name="todays_transaction">today\'s transaction</string>
</resources>