<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@drawable/download"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColorHint="@color/black"
            android:text=""
            android:id="@+id/etName"
            android:hint="@string/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/Subscription_Type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <RadioButton
            android:textColor="@color/black"
            android:background="@color/gold"
            android:textStyle="bold"
            android:id="@+id/rbGold"
            android:text="@string/Gold"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"/>

        <RadioButton
            android:textStyle="bold"
            android:background="@color/silver"
            android:id="@+id/rbSilver"
            android:text="@string/Silver"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"/>

        <RadioButton
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@color/normal"
            android:id="@+id/rbNormal"
            android:text="@string/Normal"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColorHint="@color/black"
            android:text=""
            android:hint="@string/Item_Code"
            android:id="@+id/etItemCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textColorHint="@color/black"
            android:text=""
            android:id="@+id/etItemAmount"
            android:inputType="number"
            android:hint="@string/Amount_Goods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnProses"
        android:text="@string/Process"
        android:layout_marginTop="25dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:layout_gravity="center"
        android:layout_below="@id/btnProses"
        android:layout_marginTop="16dp" />


</LinearLayout>